--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     command:
       - '-config.file=/etc/loki/config.yaml'
     volumes:
-      - ./config/loki.yaml:/etc/loki/config.yaml
+      - ./config/loki.yaml:/etc/loki/config.yaml:z
     ports:
       - 3100:3100
     restart: unless-stopped
@@ -56,7 +56,7 @@ services:
       - '--web.enable-remote-write-receiver'
       - '--enable-feature=native-histograms'
     volumes:
-      - ./config/prometheus.yaml:/etc/prometheus/config.yaml
+      - ./config/prometheus.yaml:/etc/prometheus/config.yaml:z
     ports:
       - 9090:9090
     restart: unless-stopped
@@ -66,7 +66,7 @@ services:
     command:
       - '-config.file=/etc/tempo/config.yaml'
     volumes:
-      - ./config/tempo.yaml:/etc/tempo/config.yaml
+      - ./config/tempo.yaml:/etc/tempo/config.yaml:z
     ports:
       - 4318 # This port is used for sending traces from otel-collector to tempo
       - 7999:7999 # tempo
