Otel collector config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     command:
       - '--config=/etc/otelcol/config.yaml'
     volumes:
-      - ./config/otel-collector.yaml:/etc/otelcol/config.yaml
+      - ./config/otel-collector.yaml:/etc/otelcol/config.yaml:z
     ports:
       - 4317:4317
       - 4318:4318
