--- a/config/loki.yaml
+++ b/config/loki.yaml
@@ -3,6 +3,9 @@ auth_enabled: false
 server:
   http_listen_port: 3100
 
+limits_config:
+  allow_structured_metadata: true
+
 common:
   path_prefix: /loki
   storage:
@@ -16,10 +19,10 @@ common:
 
 schema_config:
   configs:
-    - from: 2020-10-24
-      store: boltdb-shipper
+    - from: 2025-06-12
+      store: tsdb
       object_store: filesystem
-      schema: v11
+      schema: v13
       index:
         prefix: index_
         period: 24h
