--- a/config/otel-collector.yaml
+++ b/config/otel-collector.yaml
@@ -14,11 +14,8 @@ processors:
 
 exporters:
   debug:
-  loki:
-    endpoint: http://loki:3100/loki/api/v1/push
-    default_labels_enabled:
-      exporter: false
-      job: true
+  otlphttp:
+    endpoint: http://loki:3100/otlp
   prometheusremotewrite:
     endpoint: http://prometheus:9090/api/v1/write
     tls:
@@ -41,6 +38,6 @@ service:
     logs:
       receivers: [otlp]
       processors: [batch]
-      exporters: [loki, debug]
+      exporters: [otlphttp, debug]
 
   extensions: [health_check]
